--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,10 @@
   text-shadow: 0 0px 6px rgb(6 182 212 ), 0 0px 1px rgb(6 182 212 ) ;
 }
 
+.react-multiple-carousel__arrow{
+  background-color: black;
+  
 
+}
 
 
