--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,30 @@
 @tailwind components;
 @tailwind utilities;
 
+
+
+nav .dolcepro a{
+  background: linear-gradient(#1095c1 0 0) var(--p, 0) / var(--p, 0) no-repeat;
+  transition: 0.3s, background-position 0s;
+  box-sizing: border-box;
+  padding-inline: 4px;
+  padding: 2px 8px 2px 8px;
+
+}
+nav a:hover{
+  --p: 100%;
+  color: #fff;
+}
+
+@media (max-width: 1023px) {
+  nav .dolcepro a {
+    background:  transparent;
+  }
+
+  
+}
+
+
 .text-brillo {
   text-shadow: 0 0px 6px rgb(6 182 212 ), 0 0px 1px rgb(6 182 212 ) ;
 }
