--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 
 
 
-
+/*navbar*/
 nav .dolcepro a{
   background: linear-gradient(#1095c1 0 0) var(--p, 0) / var(--p, 0) no-repeat;
   transition: 0.3s, background-position 0s;
@@ -25,6 +25,58 @@ nav a:hover{
   }
 
   
+}
+
+
+/*atom responsivo*/
+
+
+  @media (max-width: 768px) {
+        .container {
+        position: relative;
+      }
+
+      .div-1 {
+        
+        
+        position: relative;
+        z-index: 2;
+      }
+
+      .div-2 {
+        
+        
+        position: absolute;
+        
+        z-index: 1;
+        opacity: 0.6;
+      }
+  }
+
+
+/*buttons github and donwload cv, responsivo*/
+@media (max-width: 420px) {
+ .github {
+    padding: 15px;
+  }
+
+  .cv{
+    padding: 15px;
+  }
+
+  
+}
+
+/*modal message send*/
+
+.swal2-popup{
+  background:  rgb(31 41 55);
+  color: white;
+}
+
+
+div:where(.swal2-container) button:where(.swal2-styled).swal2-confirm{
+  background-color: rgb(6 182 212);
 }
 
 
