--- a/src/Skills.css
+++ b/src/Skills.css
@@ -1,24 +1,3 @@
-.particles{
-  position: absolute;
-  mix-blend-mode: screen;
-  width: 350px;
-  height: 350px;
-  border-radius: 100%;
-  animation: rotate 65s infinite linear;  
-  box-shadow: 0 0px 30px  #314755, 0 0px 30px #26a0da, 0 0px 40px  #cc2b5e;
-  
-
-  
-}
-@keyframes rotate {
-  0% {
-    transform: rotate(0);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-}
-
 .container .bg-img{
   position: relative;  
   display: flex;
@@ -28,13 +7,14 @@
 
 }
 
-.container .bg-img .myImage{
+.container .bg-img .robot{
   display: block;
   width: 300px;
-  height: 300px;
+  height: 295px;
   border-radius: 100%;  
   box-shadow: 0 0px 20px  #314755, 0 0px 30px #26a0da, 0 0px 40px  #cc2b5e;
   animation: moveUpDown 4s ease-in-out infinite;
+
   
 }
 
@@ -50,26 +30,51 @@
   }
 }
 
+
+.container .bg-img .circle-halo{
+  position: absolute;
+  mix-blend-mode: screen;
+  width: 450px;
+  height: 450px;
+  border-radius: 100%;
+  animation: rotate 65s infinite linear;    
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotate(0);
+
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+
+
 .right-circle {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
+
  
 }
 
 .right-circle img {
+  
   position: absolute;
+  border-radius: 24%;
   top: 50%;
   left: 50%;
   width: 50px;
   height: 50px;
   transform: translate(-50%, -50%);  
   animation: moveInCircleRight 35s infinite linear;
+
+
 }
-
-
 
 
 @keyframes moveInCircleRight {
@@ -87,6 +92,7 @@
 /*figma*/
 .right-circle img:nth-child(1) {
   animation-delay: calc(-7s * 1); 
+
 }
 
 /*git*/
@@ -121,12 +127,14 @@
 
 .left-cirle img {
   position: absolute;
+  border-radius: 24%;
   top: 50%;
   left: 50%;
   width: 50px;
   height: 50px;
   transform: translate(-50%, -50%);
   animation: moveInCircleLeft 28s infinite linear;
+
   
 }
 
