--- a/src/index.css
+++ b/src/index.css
@@ -53,7 +53,7 @@ nav a:hover{
       }
   }
 
-/*about  */
+/*about image  */
 @media (max-width: 767px) {
         .container {
         position: relative;
@@ -63,7 +63,7 @@ nav a:hover{
       .about-1 {      
         
         position: absolute;
-        opacity: 0.6;
+        opacity: 0.4;
         z-index: 1;
         
         top: 60%;
@@ -115,7 +115,11 @@ nav a:hover{
 
 div:where(.swal2-container) button:where(.swal2-styled).swal2-confirm{
   background-color: rgb(6 182 212);
+
 }
+
+
+/*other*/
 
 
 .text-brillo {
@@ -129,3 +133,37 @@ div:where(.swal2-container) button:where(.swal2-styled).swal2-confirm{
 }
 
 
+/*Footer*/
+
+.social-icons span {
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 2.3rem;
+  height: 2rem;
+
+  clip-path: polygon(25% 0%, 75% 0%, 100% 50%, 75% 100%, 25% 100%, 0% 50%);
+  
+      
+  transition:  transform 400ms ease-in-out;     
+
+    
+  }
+
+
+.social-icons :hover {
+  transform: rotate(360deg);
+  
+
+
+
+}
+
+
+.social-icons span a {    
+
+  color: #fff;
+           
+      
+}
