--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -74,11 +74,6 @@ nav a:hover{
 
       }
 
-
-
-
-
-
       .about-2 {
         
         
@@ -88,6 +83,24 @@ nav a:hover{
         
       }
   }
+
+/* about animated border */
+
+.allsides-8 {
+  background:
+    linear-gradient(rgb(6 182 212) 500px 100px) 0 100%,
+    linear-gradient(rgb(6 182 212) 0 0) 0 100%,
+    linear-gradient(rgb(6 182 212) 0 0) 100% 0,
+    linear-gradient(rgb(6 182 212) 0 0) 100% 0;
+  background-size: 100px 3px, 3px 100px;
+  background-repeat: no-repeat;
+  transition: 0.4s;
+  padding: 50px;
+}
+.allsides-8:hover {
+  background-position: 100% 100%, 0 0, 0 0, 100% 100%;
+  color: white;
+}
 
 
 
@@ -118,12 +131,16 @@ div:where(.swal2-container) button:where(.swal2-styled).swal2-confirm{
 
 }
 
+/*hover card linear*/
 
-/*other*/
+
+
+
+/*Text Bright*/
 
 
 .text-brillo {
-  text-shadow: 0 0px 6px rgb(6 182 212 ), 0 0px 1px rgb(6 182 212 ) ;
+  text-shadow: 0 0px 6px rgb(122 255 243), 0 0px 1px rgb(122 255 243) ;
 }
 
 .react-multiple-carousel__arrow{
