--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -27,10 +27,38 @@ nav a:hover{
   
 }
 
+/*Text Bright HOME*/
+.text-brillo {
+  text-shadow: 0 0px 6px rgb(122 255 243), 0 0px 1px rgb(122 255 243) ;
+}
+
+.react-multiple-carousel__arrow{
+  background-color: black;
+  
+
+}
+
+/*modal message send*/
+
+.swal2-popup{
+  background:  rgb(31 41 55);
+  color: white;
+}
+
+/*buttons github and donwload cv, responsivo*/
+@media (max-width: 420px) {
+  .github {
+     padding: 15px;
+   }
+ 
+   .cv{
+     padding: 15px;
+   }
+ 
+   
+ }
 
 /*atom responsivo*/
-
-
   @media (max-width: 768px) {
         .container {
         position: relative;
@@ -85,7 +113,6 @@ nav a:hover{
   }
 
 /* about animated border */
-
 .allsides-8 {
   background:
     linear-gradient(rgb(6 182 212) 500px 100px) 0 100%,
@@ -102,52 +129,12 @@ nav a:hover{
   color: white;
 }
 
-
-
-
-/*buttons github and donwload cv, responsivo*/
-@media (max-width: 420px) {
- .github {
-    padding: 15px;
-  }
-
-  .cv{
-    padding: 15px;
-  }
-
-  
-}
-
-/*modal message send*/
-
-.swal2-popup{
-  background:  rgb(31 41 55);
-  color: white;
-}
-
-
 div:where(.swal2-container) button:where(.swal2-styled).swal2-confirm{
   background-color: rgb(6 182 212);
 
 }
 
 /*hover card linear*/
-
-
-
-
-/*Text Bright*/
-
-
-.text-brillo {
-  text-shadow: 0 0px 6px rgb(122 255 243), 0 0px 1px rgb(122 255 243) ;
-}
-
-.react-multiple-carousel__arrow{
-  background-color: black;
-  
-
-}
 
 
 /*Footer*/
